@@ -1,0 +1,8 @@
+<html>
+<body>
+Enforces security for AspectJ <code>JointPoint</code>s, delegating secure
+object callbacks to the calling aspect.
+
+<p>Refer to the reference guide for information on usage.
+</body>
+</html>
