@@ -1,8 +1,12 @@
 Changes in version 0.7 (2004-xx-xx)
 -----------------------------------
 
+* Added AspectJ support (especially useful for instance-level security)
 * Added MethodDefinitionSourceAdvisor for performance and autoproxying
 * Added MethodDefinitionMap querying of interfaces defined by secure objects
+* Refactored MethodDefinitionSource to work with Method, not MethodInvocation
+* Refactored AbstractSecurityInterceptor to better support other AOP libraries
+* Moved MethodSecurityInterceptor to ...intercept.method.aopalliance package
 * Documentation improvements
 
 Changes in version 0.6.1 (2004-09-25)
